--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   "dependencies": {
     "firebase": "^3.7.1",
     "material-ui": "^0.17.0",
+    "muicss": "^0.9.12",
     "react": "^15.4.2",
+    "react-color": "^2.11.4",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.2",
     "react-router": "^3.0.2",
